# dgswem

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  README.md  conf.py  environment_gcc.yml  environment_intel.yml  index.rst  install.md  meson.build  meson.options  requirements.txt
.github/compat/: compat.csv  long_compat.csv  wide_compat_reports.py
.github/workflows/: build_gcc.sh  build_intel.sh  ci.yml  gpu_single.yaml  precommit.yml  test.yaml
prep/: adcpost.F  adcprep.F  decomp.F90  meson.build  post.F  pre_global.F  prep.F  presizes.F  read_global.F
src/: #wetdry.F#  DG_hydro_timestep.F  DG_timestep.F  LDG_hydro.F  c_interface.F90  calc_normal.F  count_edges.cpp  couple2swan.F  create_edge_data.F  cstart.F  detector.F  dg.F  dgswem.F  diff45_41.F  ebarrier_edge_hydro.F  edge_int_hydro.F  fix.py  flow_edge_hydro.F  flow_edge_sed.F  fort.89  fparser.F90  fparser2.F90  global.F  global_3dvs.F  globalio.F  harm.F  hstart.F  ibarrier_edge_hydro.F  ibarrier_edge_hydro.F(1)  ibarrier_edge_hydro.F-1  ibarrier_edge_hydro.F-2  ibarrier_fluxes.F  internal_edge_hydro.F  land_edge_hydro.F  meson.build  messenger.F  messenger_elem.F  met_forcing.F  modal2nodal.F  nodalattr.F  (+33 more)
subprojects/metis/: meson.build
subprojects/metis/Lib/: meson.build  rename.h
tests/: conftest.py  pytest.ini  test_quarter_annular.py  test_run.py  test_wetdry.py  util.py
tests/mass_conservation/: fort.14  fort.15  fort.63.true  fort.dg
tests/quarter_annular/: fort.14  fort.15
tests/shinnecock/: fort.15  fort.dg
tests/wetdry/: fort.15
work/: .gitignore  adcpost  adcprep  cmplrflags.mk  dgswem  dgswem_serial  fort.15  fort.22  fort.4l  fort.dg  fort.dg_keyword  makefile  makefile.unix  makefile.windows  maxele.63  script
work/odir1/: memory_usage.mod  pre_global.mod  presizes.mod
work/odir3/: post_global.mod
work/odir4/: dg.mod  diff45_41.mod  fparser.mod  fparser2.mod  global.mod  global_3dvs.mod  harm.mod  nodalattributes.mod  owiwind.mod  sizes.mod  wind.mod
work/odir5/: dg.mod  diff45_41.mod  fparser.mod  fparser2.mod  global.mod  global_3dvs.mod  harm.mod  messenger.mod  messenger_elem.mod  nodalattributes.mod  owiwind.mod  sizes.mod  wind.mod
work/test/: test_all.py  test_run.py  util.py
work/test/mass_conservation/: fort.14
work/test/quarter_annular/: fort.dg  out.prep
work/test/slopingbeach/: slopingbeach.py
work/test/wetdry/: fort.dg  in.prep
